--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -90,7 +90,7 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/graphe3.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -294,4 +294,11 @@ a:focus, a:hover {
 
 footer {
   padding: 5rem 0;
+}
+
+.image-logo {
+  width: 25px;
+  margin: 5px;
+  -webkit-filter: blur(2px) gray();
+  filter: blur(2px) gray();
 }
