--- a/scss/_signup.scss
+++ b/scss/_signup.scss
@@ -18,3 +18,12 @@
     }
   }
 }
+
+.ensavoirplus-section {
+  padding: 10rem 0;
+  background-color: #343434;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
