première version complete

--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -4,6 +4,7 @@
 @import 'masthead.scss';
 @import 'buttons.scss';
 @import 'about.scss';
+@import 'faq.scss';
 @import 'projects.scss';
 @import 'signup.scss';
 @import 'contact.scss';
@@ -177,3 +178,4 @@ footer {
     border-bottom: 1px solid rgba(0,0,0,.125);
   }
 }
+
